# ADIS16465DgPy

./: pyproject.toml  setup.cfg  setup.py
ADIS16465DgPy/: ADIS16465.py  IMU_read.dpi  _version.py  dgpy_ADIS16465.py
Demos/: IMU_read.dgp  timestamper.py
